@@ -60,6 +60,10 @@
 #
 #QUEUE_INCOMING_SMTP_MAIL
 
+# Immediately attempt the delivery of a message accepted via SMTP.
+#
+#DELIVER_AFTER_ACCEPT
+
 # Designate a directory for simta's mail queues.
 #
 #BASE_DIR			/var/spool/simta
